# afk-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  design.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  RELEASE.md  SPIKE_RESULTS.md  THREAT_MODEL.md
src/: attach.rs  byte_queue.rs  cli.rs  identity.rs  ipc.rs  lib.rs  limits.rs  main.rs  output_tail.rs  registry.rs  runner.rs  session.rs
src/platform/: linux.rs  mod.rs  unix.rs
tests/: cli_acceptance.rs  session_acceptance.rs
tests/acceptance/: README.md  check_static_elf.py  test_check_static_elf.py  test_release_workflow.py
